--- a/style.css
+++ b/style.css
@@ -1,9 +1,18 @@
-* {
+body {
 	background-color: aliceblue;
 	color: hotpink;
+	text-align: center;
+	font-family: sans-serif;
+	margin: 0 100px;
 }
 
 h1 {
 	font-size: 60px;
-	text-align: center;
+}
+
+.box {
+	font-size: 80px;
+	background-color: teal;
+	color: aliceblue;
+	padding: 40px;
 }
